<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="notification_id">MainNotification</string>
    <string name="chanel_name">Download Channel</string>
    <string name="glide_image_loading_library_by_bump_tech">Glide - Image Loading Library by Bump Tech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retorfit_type_save_http_client_for_android_and_java_by_square_inc">Retrofit - Type-save Http client for Android and java by Square,Inc</string>
    <string name="enter_url">Enter url</string>
    <string name="dowanload_button">Download button</string>
    <string name="un_known">Un Known</string>
    <string name="fail_state">Fail</string>
    <string name="success_state">Success</string>
    <string name="status">Status</string>
    <string name="file_name">File name:</string>
    <string name="ok">OK</string>
    <string name="please_select_file_to_download">Please select the file to download</string>
</resources>
