<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="viewModel"
    type="com.udacity.view_models.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activity.MainActivity"
        tools:showIn="@layout/activity_main">

        <com.udacity.ui.custom_view.LoadingButton
            android:id="@+id/custom_button"

            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            setState="@{viewModel.buttonState}"
            android:onClick="@{()->viewModel.download()}"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/dowanload_button"
            app:backgroundColor="@color/colorPrimary"
            app:circleMarginLift="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:onLoadingText="We are loading"
            app:text="Doanload"
            app:textColor="@color/white"
            app:textSize="21sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/glideRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                android:minHeight="48dp"
                android:text="@string/glide_image_loading_library_by_bump_tech"
                android:textSize="21sp" />

            <RadioButton
                android:id="@+id/udacityRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                android:minHeight="48dp"
                android:text="@string/loadapp_current_repository_by_udacity"
                android:textSize="21sp" />

            <RadioButton
                android:id="@+id/retrofitRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                android:minHeight="48dp"
                android:text="@string/retorfit_type_save_http_client_for_android_and_java_by_square_inc"
                android:textSize="21sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/undraw_download" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>